--- a/package.json
+++ b/package.json
@@ -1,13 +1,44 @@
 {
   "name": "kitty-encode",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "Free online developer tools for encoding, hashing, and data transformation. Support for URL encoding, Base64, MD5, UUID generation, password generation, and character encoding conversion.",
+  "keywords": [
+    "developer-tools",
+    "encoding",
+    "base64",
+    "md5",
+    "uuid",
+    "url-encoder",
+    "password-generator",
+    "encoding-converter",
+    "online-tools",
+    "web-tools",
+    "data-transformation",
+    "cryptography",
+    "security-tools"
+  ],
+  "author": {
+    "name": "SymphonyIceAttack",
+    "email": "contact@kitty-encode.top",
+    "url": "https://github.com/SymphonyIceAttack"
+  },
+  "homepage": "https://kitty-encode.top",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SymphonyIceAttack/kitty-encode.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SymphonyIceAttack/kitty-encode/issues"
+  },
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -45,5 +76,21 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
