--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "author": {
     "name": "SymphonyIceAttack",
-    "email": "contact@kitty-encode.top",
+    "email": "email@kitty-encode.top",
     "url": "https://github.com/SymphonyIceAttack"
   },
   "homepage": "https://kitty-encode.top",
