--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "schema-dts": "^1.1.5",
-    "shiki": "^3.20.0",
+    "shiki": "3.19.0",
     "sonner": "^2.0.7",
     "streamdown": "^1.6.10",
     "tailwind-merge": "^3.4.0",
