--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,10 @@
   "name": "kitty-encode",
   "keep_names": false,
   "compatibility_date": "2024-12-30",
-  "compatibility_flags": ["nodejs_compat", "global_fetch_strictly_public"],
+  "compatibility_flags": [
+    "nodejs_compat",
+    "global_fetch_strictly_public"
+  ],
   // R2 incremental cache
   "r2_buckets": [
     {
@@ -24,7 +27,9 @@
   "migrations": [
     {
       "tag": "v1",
-      "new_sqlite_classes": ["DOQueueHandler"]
+      "new_sqlite_classes": [
+        "DOQueueHandler"
+      ]
     }
   ],
   // D1 Tag Cache (Next mode)
@@ -36,6 +41,9 @@
       "database_name": "next-kitty-encode"
     }
   ],
+  "images": {
+    "binding": "IMAGES",
+  },
   "assets": {
     "directory": ".open-next/assets",
     "binding": "ASSETS"
